Upgrade JDK baseline of servers to 17 in advance #790 (the commit will fail tests because images for JDK 17 haven't been published)