@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.3</version>
+        <version>2.5.4</version>
     </parent>
 
     <groupId>im.turms</groupId>
@@ -28,7 +28,7 @@
 
     <properties>
         <!-- Project -->
-        <java.version>16</java.version>
+        <java.version>17</java.version>
         <revision>0.10.0-SNAPSHOT</revision>
 
         <!-- Runtime Deps -->
@@ -36,13 +36,13 @@
         <blockhound.version>1.0.6.RELEASE</blockhound.version>
         <disruptor.version>3.4.4</disruptor.version>
         <guava.version>30.1.1-jre</guava.version>
-        <mongodb.version>4.3.0</mongodb.version> <!-- TODO: Remove once spring-boot-dependencies supports -->
+        <mongodb.version>4.3.1</mongodb.version> <!-- TODO: Remove once spring-boot-dependencies supports -->
         <pf4j.version>3.6.0</pf4j.version>
         <protobuf.version>3.17.3</protobuf.version>
 
         <!-- Runtime Deps for Testing -->
         <assertj-guava.version>3.4.0</assertj-guava.version>
-        <jmh.version>1.32</jmh.version>
+        <jmh.version>1.33</jmh.version>
         <testcontainers.version>1.16.0</testcontainers.version>
 
         <!-- Maven plugins -->
@@ -329,9 +329,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
                     <includes>
                         <include>**/*Tests.java</include>
                     </includes>
@@ -344,9 +341,6 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven-failsafe-plugin.version}</version>
                 <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
                     <includes>
                         <include>**/*IT.java</include>
                         <include>**/*ST.java</include>
