@@ -14,7 +14,6 @@
 -XX:+UseG1GC
 
 # Module
---illegal-access=permit
 
 # Diagnostics
 
